# Fast.API

./: .gitignore  Dockerfile  docker-compose.yml  git_log.txt  main.py  pyproject.toml
app/: main.py
app/api/v1/endpoints/: users.py
app/schemas/: user.py
