[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "AnnaPasaman",email = "annapasaman845@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
